@@ -1,3 +1,4 @@
+- fixed bug in browser.lua (u could be nil but indexed)
 - added b:ssl_init_stuff() and b:verbose_mode()
 - complete fix to browser.lua that now supports rotten cookies (thanks Eddi)
 09/07/2004 0.0.12 fix release
